# fastcafe

./: .gitignore  README.md  product_requirements_document.md  pyproject.toml  pyrightconfig.json  requirements.txt
project/: conftest.py  db.sqlite3  pytest.ini
project/app_checkout/: factory.py  fixtures.py  models.py  serializers.py  services.py  tests.py  views.py
project/app_checkout/tests/: conftest.py  test_checkout.py
project/app_menu/: admin.py  apps.py  models.py  serializers.py  views.py
project/app_order/: admin.py  apps.py  fixtures.py  models.py  serializers.py  services.py  tests.py  views.py
project/app_order/services/: manager.py  new_order.py
project/app_order/tests/: conftest.py  test_create_new_order.py
project/app_order/tests/new_order/: conftest.py  test_create_new_order.py  test_delete_new_order_item.py  test_quantity_items.py
project/app_payment/: domains.py  models.py  serializers.py  services.py  tests.py  views.py
project/app_payment/tests/: conftest.py  data_error.txt  data_ok.txt  factory.py  test_new_payment.py
project/apps/menu/: apps.py  models.py  serializers.py  urls.py  views.py
project/apps/order/: models.py  serializers.py  tests_models.py  tests_view.py  views.py
project/apps/product/: admin.py  models.py  urls.py  views.py
project/project/: services.py  settings.py  urls.py  utils.py  view.py
project/project/fixtures/: __init__.py  mixer.py  user.py
project/project/test/: factories.py  mixer.py
project/project/tests/: mixer.py
(+1 files in other folders)
