[tool.poetry]
name = "fastcafe"
version = "0.1.0"
description = ""
authors = ["Vitaliy Sazonov <sazonov89vit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-phonenumber-field = "^7.1.0"
pillow = "^10.0.0"
social-auth-app-django = "^5.2.0"
phonenumbers = "^8.13.18"
liqpay-sdk-python3 = "^1.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mixer = "^7.2.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
